update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ prompts.txt
 .envrc
 __pycache__/api_key.cpython-39.pyc
 backend/__pycache__/app.cpython-39.pyc
+backend/__pycache__/api_key.cpython-39.pyc
