--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "bootstrap": "^5.2.3",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
-    "vue-good-table": "^2.21.11",
+    "vue-good-table-next": "^0.2.1",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
